@@ -11,6 +11,7 @@ Version 1.1.8+SVN:
  * misc
     * fixed --with-desktopdir and --with-icondir, it still needs --with-kde or
          --with-gnome (#6499)
+ * correct handling of UTF8 filenames under windows
 
 Version 1.1.8:
  * campaigns
